19537
In case one wants to use the prefix operators (+, -, !, ...) as standalone identifiers one gets the following error message:
```scala
scala> def + : Any = null
$plus: Any

scala> +.toString
<console>:1: error: illegal start of simple expression
       +.toString
        ^

scala> +;
<console>:1: error: illegal start of simple expression
       +;
        ^
```
